--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
-      - name: Lint code
-        run: npm run lint || true
+      # - name: Lint code
+      #   run: npm run lint || true
         
-      - name: Run tests
-        run: npm run test -- --run || true
+      # - name: Run tests
+      #   run: npm run test -- --run || true
         
       - name: Build project
         run: npm run build
