--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@lexical/history": "^0.34.0",
+    "@lexical/html": "^0.34.0",
     "@lexical/link": "^0.34.0",
     "@lexical/list": "^0.34.0",
     "@lexical/plain-text": "^0.34.0",
